Fix inability to shuffle immutable list